first serious upload

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,11 @@
 Package: lbrct
-Title: RCT utility functions.
+Title: RCT Utility Functions
 Version: 0.1
 Authors@R: person('Luca', 'Braglia', email = 'lbraglia@mailbox.org', role = c('aut', 'cre'))
 Description: RCT utility functions.
-Depends: R (>= 3.2.3)
+Depends:
+    R (>= 3.2.3)
+Imports: openxlsx, lbmisc
 License: GPL-3
 LazyData: true
+RoxygenNote: 5.0.1
