--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,6 @@ importFrom(openxlsx,saveWorkbook)
 importFrom(openxlsx,setColWidths)
 importFrom(openxlsx,setRowHeights)
 importFrom(openxlsx,writeData)
+importFrom(tools,texi2pdf)
+importFrom(xtable,print.xtable)
+importFrom(xtable,xtable)
