--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: person('Luca', 'Braglia', email = 'lbraglia@gmail.com', role = c('aut
 Description: RCT utility functions.
 Depends:
     R (>= 3.2.3)
-Imports: openxlsx, lbmisc
+Imports: openxlsx, lbmisc, xtable
 License: GPL-3
 LazyData: true
 RoxygenNote: 6.0.1
