--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: lbrct
-Title: RCT Utility Functions
+Package: lbtrial
+Title: Trial Utility Functions
 Version: 0.1
 Authors@R: person('Luca', 'Braglia', email = 'lbraglia@gmail.com', role = c('aut', 'cre'))
-Description: RCT utility functions.
+Description: Trial (not only RCT) utility functions.
 Depends:
     R (>= 3.2.3)
 Imports: lbmisc, xtable
